--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2023",
+    "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -8,10 +8,9 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node", //bundler
+    "moduleResolution": "bundler", //bundler
     "resolveJsonModule": true,
     "isolatedModules": true,
-    //"ignoreDeprecations": "6.0",
     "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
