--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "@tanstack/react-query": "^5.90.11",
+    "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
-    "next": "16.0.4",
+    "mapbox-gl": "^3.16.0",
+    "next": "^16.0.4",
     "pg": "^8.16.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -24,10 +28,13 @@
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "autoprefixer": "^10.4.22",
+    "eslint": "^9.39.1",
     "eslint-config-next": "16.0.4",
+    "postcss": "^8.5.6",
+    "prettier": "^3.7.3",
     "prisma": "^7.0.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
