--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "next": "16.0.4",
+    "posthog-js": "^1.298.1",
+    "posthog-node": "^5.14.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
