Create Test Function to Pull Property Data + Working on Snapshot Function

--- a/api/.env
+++ b/api/.env
@@ -10,3 +10,7 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL=postgresql://postgres:DV+DcW_43rp9ZhT@db.jzzgtemqjibvyjdjjxdb.supabase.co:5432/postgres
+
+ATTOM_API_KEY="a22ba0e42d765077dc9e5593f8861bee"
+
+ATTOM_API_BASE_URL="https://api.gateway.attomdata.com"
