--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^7.0.1",
+    "axios": "^1.13.2",
     "next": "14.2.5",
+    "okhttp": "^1.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
